<resources>
    <string name="app_name">SpendLess</string>
    <string name="action_settings">Settings</string>
    <string name="remaining_money_sample">2000</string>
    <string name="category_image">Category image view</string>
    <string name="transactions">Transaction</string>
    <string name="categories">Categories</string>
    <string name="savings">Savings</string>
    <string name="transaction_insert">Transaction successfully inserted</string>
    <string name="new_transaction">New transaction</string>
    <string name="transaction_value">Transaction value</string>
    <string name="pick_category">Pick category</string>
    <string name="transaction_value_from">value from</string>
    <string name="transaction_value_to">value to</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="transactions_loading">Loading Transactions...</string>
    <string name="submit">Submit</string>
    <string name="date_picker_to">date to</string>
    <string name="date_picker_from">date from</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="spendings_daily">Daily</string>
    <string name="spendings">Spendings</string>
    <string name="spendings_monday">Monday</string>
    <string name="spendings_tuesday">Tuesday</string>
    <string name="spendings_wednesday">Wednesday</string>
    <string name="spendings_thursday">Thursday</string>
    <string name="spendings_friday">Friday</string>
    <string name="spendings_saturday">Saturday</string>
    <string name="spendings_sunday">Sunday</string>
    <string name="spendings_weekly">Weekly</string>
    <string name="spendings_monthly">Monthly</string>
    <string name="transaction_description">Description</string>
    <string name="transaction_category">Category</string>
    <string name="category_created">Category created</string>
    <string name="transaction_insert_fail">Failed to insert transaction. Please check your input.</string>
    <string name="transactions_remainder">Insert recent transactions</string>
    <string name="transactions_reminder_desc">Hey! You haven\'t entered any transactions for past day</string>
</resources>
