<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.matija.spendless.ui.MainActivity">
    <item
        android:id="@+id/action_transactions"
        android:orderInCategory="100"
        android:title="@string/transactions"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_categories"
        android:orderInCategory="50"
        android:title="@string/categories"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_spendings"
        android:orderInCategory="10"
        android:title="@string/spendings"
        android:icon="@drawable/ic_savings"
        app:showAsAction="always" />

</menu>
